# f-sam2-kaggle

./: _C.so-cu117-tencentgpu  f-test.py  imgtovideos.py  one_file.py  script-sam2.py
segment-anything-2-real-time-main/: easy-install.py  f.py  many_files_paths.py  pyproject.toml  requirements.txt  setup.py  split_videos.py
segment-anything-2-real-time-main/transnetv2/: main.py
