[build-system]
requires = [
    "setuptools>=61.0",  
    "torch<=2.3.1",
    ]
build-backend = "setuptools.build_meta"
[options]
# equivalent to using --extra-index-url with pip, which is needed for specifying the CUDA version torch and torchvision
dependency_links = [
    "https://download.pytorch.org/whl/cu117"
]